bynkc/tests/fixtures/negative/480_messages_missing_reference/src/bundle.bynk
commons bundle

uses bynk.locale

messages "en" {
  "a" => "b"
}
